force-app/main/default/objects/Sentinel_Anomaly_Signal__c/Sentinel_Anomaly_Signal__c.object-meta.xml
<CustomObject>
    <label>Sentinel Anomaly Signal</label>
    <nameField>
        <displayFormat>SAS-{000000}</displayFormat>
        <label>Anomaly Signal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentinel Anomaly Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>