force-app/main/default/objects/Sentinel_Anomaly_Signal__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>