force-app/main/default/objects/Sentinel_Anomaly_Signal__c/fields/Prediction__c.field-meta.xml
<CustomField>
    <fullName>Prediction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sentinel Prediction</label>
    <referenceTo>Sentinel_Prediction__c</referenceTo>
    <relationshipLabel>Sentinel Anomaly Signals</relationshipLabel>
    <relationshipName>Sentinel_Anomaly_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>