force-app/main/default/objects/Sentinel_Anomaly_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow Failure</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
            <value>
                <fullName>Apex Exception</fullName>
            </value>
            <value>
                <fullName>Retry Spike</fullName>
            </value>
            <value>
                <fullName>Deployment Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>